Попытка реализовать луковую архитектуру

--- a/Simbir/Simbir/appsettings.json
+++ b/Simbir/Simbir/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-OG9J9CE\\SQLEXPRESS;Initial Catalog=Library;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
