Revert "Исправление замечаний"
This reverts commit d953cb648ad119073914c55593de57b216b62956.

--- a/Simbir/Simbir/Simbir.csproj
+++ b/Simbir/Simbir/Simbir.csproj
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data\Domain.csproj" />
+    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
