--- a/Simbir/Simbir/appsettings.json
+++ b/Simbir/Simbir/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OG9J9CE\\SQLEXPRESS;Database=LibraryTestTEST;User ID=Ruslan; Password=12345"
+    "DefaultConnection": "Server=DESKTOP-OG9J9CE\\SQLEXPRESS;Database=LibraryTestV2;User ID=RuslanKozlyak; Password=12345"
   },
   "Logging": {
     "LogLevel": {
